...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/writeDelete"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/newUsernameForm"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/red_button_background"
                android:text="@string/confirmbutton"
                android:textSize="20sp"
                android:padding="10dp"
...
