<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_prize"
        android:icon="@drawable/cup"
        android:title="@string/prize" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat"
        android:title="@string/chat" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_settings"
        android:title="@string/user_settings" />

</menu>
