...
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="Username"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/usernameButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_background"
                    android:text="@string/change"
                    android:textSize="16sp"
                    android:padding="5dp"
...
