<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/Green"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/logo" />
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/password"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/textview_border"
            android:backgroundTint="@color/lightGreen"
            android:text="@string/login"
            android:textColor="@color/Green"
            android:textSize="16sp" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/login"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/textview_border"
            android:backgroundTint="@color/lightGreen"
            android:text="@string/register"
            android:textColor="@color/Green"
            android:textSize="16sp" />


        <Button
            android:id="@+id/loginWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/register"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/textview_border"
            android:backgroundTint="@color/lightGreen"
            android:drawableStart="@drawable/google"
            android:paddingStart="45dp"
            android:paddingEnd="30dp"
            android:text="@string/login_with_google"
            android:textColor="@color/Green"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/mail"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/lightGreen"
            android:textSize="16sp"
            android:autofillHints="@string/password"/>

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="@string/userName"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/lightGreen"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/loginWithGoogle"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textColorHint="@color/lightGreen"
            android:textSize="16sp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/en"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/en"
                android:textColor="@color/Green"
                android:background="@drawable/textview_border"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/es"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/es"
                android:textColor="@color/Green"
                android:background="@drawable/textview_border"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/ca"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ca"
                android:textColor="@color/Green"
                android:background="@drawable/textview_border"
                android:onClick="onClick"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>