<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="80dp"
        android:layout_margin="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/user"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:hint="@string/userName" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/register_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="16sp"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:hint="@string/password"/>
            <ImageView
                android:id="@+id/eye_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:src="@drawable/hide" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/register_confirm_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="16sp"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:hint="@string/confirm"/>

            <ImageView
                android:id="@+id/eye_confirm"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:src="@drawable/hide" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_privacy"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="TextView" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textview_border"
            android:backgroundTint="@color/lightGreen"
            android:text="@string/register"
            android:textColor="@color/Green"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>