...
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="30dp"
            android:id="@+id/setupMapView"/>

        <Button
            android:id="@+id/acceptButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/textview_border"
            android:backgroundTint="@color/lightGreen"
            android:text="@string/accept"
...
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/remindMeLaterButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textview_border"
            android:backgroundTint="@color/lightGrey"
            android:text="@string/remind_me_later"
...
